--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  font-family: Poppins;
+}
